@@ -152,6 +152,22 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ZkCmdExecutor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|ZkCoreNodeProps
 import|;
 end_import
@@ -633,6 +649,78 @@ name|collection
 operator|=
 name|collection
 expr_stmt|;
+try|try
+block|{
+operator|new
+name|ZkCmdExecutor
+argument_list|(
+name|zkStateReader
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|getZkClientTimeout
+argument_list|()
+argument_list|)
+operator|.
+name|ensureExists
+argument_list|(
+name|ZkStateReader
+operator|.
+name|COLLECTIONS_ZKNODE
+operator|+
+literal|"/"
+operator|+
+name|collection
+argument_list|,
+name|zkClient
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
@@ -2258,6 +2346,69 @@ name|zkClient
 operator|=
 name|zkClient
 expr_stmt|;
+try|try
+block|{
+operator|new
+name|ZkCmdExecutor
+argument_list|(
+name|zkClient
+operator|.
+name|getZkClientTimeout
+argument_list|()
+argument_list|)
+operator|.
+name|ensureExists
+argument_list|(
+literal|"/overseer_elect"
+argument_list|,
+name|zkClient
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 annotation|@
 name|Override
